--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,23 +1,45 @@
-.side-bar {
-    height: 100% !important;
-    display: flex;
-    flex-direction: column;
-    border-right: 1px solid;
-    border-radius: 0;
-    border-color: rgba(64, 194, 133, 0.693);
-    background-color: rgb(255, 255, 255);
-    transition: 0.8s ease;
+#sidenav {
+    height: 100%;
+    /* Full-height: remove this if you want "auto" height */
+    width: 300px;
+    /* Set the width of the sidebar */
+    position: fixed;
+    /* Fixed Sidebar (stay in place on scroll) */
+    z-index: 1;
+    /* Stay on top */
+    top: 0;
+    /* Stay at the top */
+    background-color: #111;
+    /* Black */
+    overflow-x: hidden;
+    /* Disable horizontal scroll */
+    padding-top: 20px;
+    text-align: center;
 }
 
-.toggle-menu {
-    height: 50px;
-    border-top-right-radius: 10rem;
-    border-bottom-right-radius: 9rem;
-    width: 10px;
-    position: absolute;
-    outline: none;
-    z-index: 1;
-    background-color: rgba(64, 194, 133, 0.693);
-    border-color: rgba(64, 194, 133, 0.693);
-    border-left: 0;
+/* The navigation menu links */
+.sidenav a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+}
+
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover {
+    color: #f1f1f1;
+}
+
+
+
+/* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+    .sidenav {
+        padding-top: 15px;
+    }
+
+    .sidenav a {
+        font-size: 18px;
+    }
 }
