--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,56 @@ html {
   height: 100%;
 }
 
+#sidenav {
+  margin-left: 100px;
+  height: 100%;
+  /* Full-height: remove this if you want "auto" height */
+  width: 300px;
+  /* Set the width of the sidebar */
+  position: fixed;
+  /* Fixed Sidebar (stay in place on scroll) */
+  z-index: 1;
+  /* Stay on top */
+  top: 0;
+  /* Stay at the top */
+  background-color: #111;
+  /* Black */
+  overflow-x: hidden;
+  /* Disable horizontal scroll */
+  padding-top: 20px;
+  text-align: center;
+}
+
+/* The navigation menu links */
+.sidenav a {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+}
+
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+
+
+/* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+  #sidenav {
+    padding-top: 15px;
+    display: none;
+
+  }
+
+  #sidenav a {
+    font-size: 18px;
+
+  }
+}
+
 #card1 {
   background-image: url(./Night\ Sky\ 3.jpg);
   height: 100vh;
@@ -16,14 +66,17 @@ html {
 /* #box1 {} */
 /* Style page content */
 #main {
-  margin-left: 160px;
+  margin-left: 262px;
+  margin-top: -20px;
+  height: 100vh;
   /* Same as the width of the sidebar */
   padding-left: 150px;
   padding-right: 150px;
+  padding-top: 0;
 }
 
 
-#name {
-  font-family: 'Cormorant Garamond', serif;
+#font {
+  font-family: 'Garamond', serif;
   color: white
 }
